# paper-search-mcp

./: .dockerignore  .gitignore  Dockerfile  README-zh.md  README.md  pyproject.toml
paper_search_mcp/: server.py
